# 4D-ARE

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: concepts.md  customization.md  getting-started.md  mcp-integration.md
examples/: custom_domain.py  quickstart.py
examples/notebooks/: custom_domain.ipynb  quickstart.ipynb
experiments/: README.md  config.py  experiment.py  prompts.py  requirements.txt
mcp_servers/: README.md
mcp_servers/demo_server/: __init__.py  pyproject.toml  server.py
mcp_servers/excel_server/: __init__.py  server.py
mcp_servers/mysql_server/: __init__.py  server.py
mcp_servers/postgres_server/: __init__.py  server.py
src/four_d_are/: __init__.py  agent.py  cli.py  config.py  prompts.py  schemas.py
