[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "four-d-are-mcp-demo"
version = "0.1.0"
description = "Demo MCP Server for 4D-ARE - Provides static demo data"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[project.scripts]
four-d-are-mcp-demo = "mcp_servers.demo_server.server:serve"
